--- a/AspNetCoreIdentityApp.Web/appsettings.Development.json
+++ b/AspNetCoreIdentityApp.Web/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SqlCon": "server=DESKTOP-7LR4Q85\\SQLEXPRESS;Database=IdentityDb;Integrated Security=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
