Identity tabloları migrate edildi.

--- a/AspNetCoreIdentityApp.Web/appsettings.Development.json
+++ b/AspNetCoreIdentityApp.Web/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlCon": "server=DESKTOP-7LR4Q85\\SQLEXPRESS;Database=IdentityDb;Integrated Security=true;"
+    "SqlCon": "Data Source=DESKTOP-7LR4Q85\\SQLEXPRESS;Initial Catalog=IdentityDb;Integrated Security=true;Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "Logging": {
     "LogLevel": {
